--- a/bower.json
+++ b/bower.json
@@ -1,10 +1,9 @@
 {
   "name": "gk-google-font",
-  "version": "0.0.2",
   "authors": [
     "EZoUI <ezoservice@icsc.com.tw>"
   ],
-  "main": "gfont.html",
+  "main": "gk-google-font.html",
   "keywords": [
     "gk",
     "web-components",
@@ -12,15 +11,7 @@
   ],
   "license": "MIT",
   "homepage": "http://www.ezoui.com/",
-  "private": true,
-  "ignore": [
-    "**/.*",
-    "node_modules",
-    "bower_components",
-    "test",
-    "tests"
-  ],
-  "dependencies": {
+  "devDependencies": {
     "gk-loader": "../gk-loader"
   }
 }
